--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "cron":"*/1 * * * *",
   "f": "IPlist3.txt",
-  "url": "https://speed.cloudflare.com/__down?bytes=52428800&",
+  "url": "https://speed.cloudflare.com/__down?bytes=52428800",
   "o": "",
   "p": 20,
   "dn": 1000,
