--- a/.github/workflows/buildDocker.yml
+++ b/.github/workflows/buildDocker.yml
@@ -23,6 +23,13 @@ jobs:
     # 设置 Docker Buildx，启用跨平台构建支持
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+    
+    # 登录到 Docker Hub
+    - name: Login to Docker Hub
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      run: echo $ACCESS_TOKEN | docker login -u $DOCKER_USERNAME --password-stdin
 
     - name: 检查并重标已存在镜像
       run: |
