--- a/.github/workflows/buildDocker.yml
+++ b/.github/workflows/buildDocker.yml
@@ -5,61 +5,72 @@ on:
     branches:
       - dev  # 当推送到 dev 分支时触发
   workflow_dispatch:  # 添加手动触发的功能
-  
+
 env:
   IMAGE_NAME: cloudflarespeedtest
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    # 检出代码
+    # 1. 检出代码
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # 设置 Docker Buildx，启用跨平台构建支持
+    # 2. 检查并下载 latest 发布版本中的 dist.zip
+    - name: Check for latest release and download dist.zip
+      run: |
+        # 作者名称
+        REPO_OWNER="luiguangguan"
+        REPO_NAME="WebUICloudflareSpeedTes"
+
+        echo "Fetching latest release for $REPO_OWNER/$REPO_NAME..."
+
+        # 使用 GitHub API 获取最新发布版本信息
+        RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+        https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/releases/latest)
+
+        # 检查是否有 `latest` 发布
+        LATEST_TAG=$(echo "$RESPONSE" | jq -r '.tag_name')
+        if [ "$LATEST_TAG" == "null" ]; then
+          echo "No latest release found."
+          exit 1
+        fi
+
+        echo "Latest release found: $LATEST_TAG"
+
+        # 检查是否包含 dist.zip 资产
+        DIST_ZIP_URL=$(echo "$RESPONSE" | jq -r '.assets[] | select(.name == "dist.zip") | .browser_download_url')
+        if [ -z "$DIST_ZIP_URL" ]; then
+          echo "No dist.zip found in the latest release."
+          exit 1
+        fi
+
+        echo "Downloading dist.zip..."
+        curl -L -o dist.zip -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "$DIST_ZIP_URL"
+
+        echo "Unzipping dist.zip..."
+        mkdir -p dist
+        unzip -o dist.zip -d dist
+        echo "Unzipped dist.zip to ./dist"
+        rm -rf ./vue/static/*
+        cp -r ./dist/dist/* ./vue/static/
+
+    # 3. 设置 Docker Buildx，启用跨平台构建支持
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-    
-    # 登录到 Docker Hub
+
+    # 4. 登录到 Docker Hub
     - name: Login to Docker Hub
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       run: echo $ACCESS_TOKEN | docker login -u $DOCKER_USERNAME --password-stdin
 
-    - name: 检查并重标已存在镜像
-      run: |
-        IMAGE_ID=$DOCKER_USERNAME/$IMAGE_NAME
-        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-        
-        # 获取 GitHub 事件中的分支名称
-        BRANCH_NAME=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-        
-        # 对于 master 分支使用 latest 版本号
-        VERSION=$(if [ "$BRANCH_NAME" == "master" ]; then echo "latest"; else echo $BRANCH_NAME; fi)
-
-        echo "Checking if the image $IMAGE_ID:$VERSION exists on Docker Hub..."
-
-        # 使用 Docker Hub API 检查是否存在该标签的镜像
-        TAG_EXISTS=$(curl -s -u $DOCKER_USERNAME:$ACCESS_TOKEN "https://hub.docker.com/v2/repositories/$DOCKER_USERNAME/$IMAGE_NAME/tags/$VERSION/" | jq -r '.name')
-
-        if [ "$TAG_EXISTS" == "$VERSION" ]; then
-          # 使用 github.run_number 计算新的标签
-          PREV_RUN_NUMBER=$(( ${{ github.run_number }} - 1 ))
-          echo "Tagging the existing image with run number: $PREV_RUN_NUMBER"
-          
-          # 给现有标签重新打上新的标签 (将远程镜像标签为 $VERSION 改为 $PREV_RUN_NUMBER)
-          docker pull $IMAGE_ID:$VERSION
-          docker tag $IMAGE_ID:$VERSION $IMAGE_ID:$PREV_RUN_NUMBER
-          docker push $IMAGE_ID:$PREV_RUN_NUMBER
-        else
-          echo "No existing image found with tag $VERSION on Docker Hub."
-        fi
-    # 构建和推送 Docker 镜像（支持多平台）
+    # 5. 构建和推送 Docker 镜像（支持多平台）
     - name: Build and Push Docker Image for x86 and ARM riscv64
       run: |
         IMAGE_ID=$DOCKER_USERNAME/$IMAGE_NAME
@@ -67,12 +78,11 @@ jobs:
 
         # 获取 GitHub 事件负载中的分支名
         BRANCH_NAME=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
+        
         # 根据分支选择版本号
         if [ "$BRANCH_NAME" == "master" ]; then
           VERSION="latest"
         else
-        #  VERSION="$BRANCH_NAME.${{ github.run_number }}"
           VERSION="latest"
         fi
 
@@ -80,7 +90,6 @@ jobs:
         echo "VERSION=$VERSION"
 
         # 使用 docker buildx 构建并推送多平台镜像
-        # docker buildx build --platform linux/amd64 -f Dockerfile -t $IMAGE_ID:$VERSION . --push
         docker buildx build --platform linux/amd64,linux/arm64,linux/386 -f Dockerfile -t $IMAGE_ID:$VERSION . --push
 
         # 打印构建成功的版本信息
