--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "cron":"0 */3 * 1 10 *",
+  "cron":"0 */1 * * * *",
   "f": "data/IPlist.txt",
   "db":"data/data.db",
   "url": "https://speed.cloudflare.com/__down?bytes=52428800",
